--- a/README.html
+++ b/README.html
@@ -15,45 +15,54 @@
         font-style: italic;
       }
       .custom {
-        /* (:background "Darkolivegreen1") */
-        background-color: #caff70;
+        /* (:background "Orange1") */
+        background-color: #ffa500;
       }
       .custom-1 {
-        /* (:background "Pink") */
-        background-color: #ffc0cb;
+        /* (:background "PaleVioletRed1") */
+        background-color: #ff82ab;
       }
       .custom-10 {
       }
       .custom-11 {
-      }
-      .custom-12 {
-      }
-      .custom-13 {
-      }
-      .custom-14 {
-      }
-      .custom-15 {
-      }
-      .custom-16 {
-        /* (:foreground "red" :strike-through t) */
-        color: #ff0000;
+        /* (:strike-through t) */
         text-decoration: line-through;
       }
+      .custom-12 {
+        /* (:underline t) */
+        text-decoration: underline;
+      }
+      .custom-13 {
+        /* (:slant italic) */
+        font-style: italic;
+      }
+      .custom-14 {
+        /* (:weight bold) */
+        font-weight: bold;
+      }
+      .custom-15 {
+        /* (:foreground "dark red") */
+        color: #8b0000;
+      }
+      .custom-16 {
+        /* (:background "LightSalmon1") */
+        background-color: #ffa07a;
+      }
       .custom-17 {
-        /* (:foreground "blue") */
-        color: #0000ff;
-      }
-      .custom-18 {
-        /* (:background "PaleVioletRed1") */
-        background-color: #ff82ab;
-      }
-      .custom-19 {
-        /* (:background "Orange1") */
-        background-color: #ffa500;
-      }
-      .custom-2 {
         /* (:background "Yellow") */
         background-color: #ffff00;
+      }
+      .custom-18 {
+        /* (:background "Pink") */
+        background-color: #ffc0cb;
+      }
+      .custom-19 {
+        /* (:background "Darkolivegreen1") */
+        background-color: #caff70;
+      }
+      .custom-2 {
+        /* (:foreground "blue") */
+        color: #0000ff;
       }
       .custom-20 {
       }
@@ -64,37 +73,24 @@
       .custom-23 {
       }
       .custom-3 {
-        /* (:background "LightSalmon1") */
-        background-color: #ffa07a;
+        /* (:foreground "red" :strike-through t) */
+        color: #ff0000;
+        text-decoration: line-through;
       }
       .custom-4 {
-        /* (:foreground "dark red") */
-        color: #8b0000;
       }
       .custom-5 {
-        /* (:weight bold) */
-        font-weight: bold;
       }
       .custom-6 {
-        /* (:slant italic) */
-        font-style: italic;
       }
       .custom-7 {
-        /* (:underline t) */
-        text-decoration: underline;
       }
       .custom-8 {
-        /* (:strike-through t) */
-        text-decoration: line-through;
       }
       .custom-9 {
       }
       .flyspell-duplicate {
         /* flyspell-duplicate */
-        text-decoration: underline;
-      }
-      .flyspell-incorrect {
-        /* flyspell-incorrect */
         text-decoration: underline;
       }
       .org-block-begin-line {
@@ -164,32 +160,33 @@
   </head>
   <body>
     <pre>
-<span class="org-document-info-keyword">#+TITLE:</span> <span class="org-document-title"><span class="flyspell-incorrect">ov</span></span><span class="org-document-title">-highlighter
+<span class="org-document-info-keyword">#+TITLE:</span> <span class="org-document-title">ov-highlight
 </span>
-<span class="flyspell-duplicate">ov</span>-highlighter provides a lightweight way to highlight text and put notes on
+<span class="flyspell-duplicate">ov</span>-highlight provides a lightweight way to highlight text and put notes on
 them using overlays that are locally stored.
 
-<span class="flyspell-duplicate">ov</span>-highlighter defines a local save-buffer-hook to automatically update and save highlights. It uses local file variables to load the highlights and apply them when the file is opened. All of the data is stored in a single line of base64 encoded text that is made mostly invisible by Emacs.
+ov-highlight defines a local save-buffer-hook to automatically update and save highlights. It uses local file variables to load the highlights and apply them when the file is opened. All of the data is stored in a single line of base64 encoded text that is made mostly invisible by Emacs.
 
 <span class="org-level-1">* Features</span>...
 <span class="org-level-1">* Known limitations</span>...
 <span class="org-level-1">* Examples</span>
 
-Note: These will not be visible without installing <span class="flyspell-duplicate">ov</span>-highlighter. See <span class="org-link"><a href="nil:nil">./README.html</a></span> to see what they look like.
+Note: These will not be visible without installing ov-highlight. See <span class="org-link"><a href="http://htmlpreview.github.com/?https://github.com/jkitchin/ov-highlighter/blob/master/README.html">README.html</a></span> to see what they look like. Not all the markups convert to html, but most of them do. The tooltips are not preserved either.
 
-- <span class="custom">green</span>
-- <span class="custom-1">pink</span>
-- <span class="custom-2">yellow</span>
-- <span class="custom-3">my choice (</span><span class="custom-3"><span class="flyspell-incorrect">LightSalmon</span></span><span class="custom-3">2)</span>
-- <span class="custom-4">dark red text</span>
+- <span class="custom-19">green</span>
+- <span class="custom-18">pink</span>
+- <span class="custom-17">yellow</span>
+- <span class="custom-16">my choice (LightSalmon2)</span>
+- <span class="custom-15">dark red text</span>
 
 <span class="org-level-2">** Markup examples</span>
 
-<span class="custom-5">bold</span>, <span class="custom-6">italic</span>, <span class="custom-7">underlined</span>, <span class="custom-8">struck</span>, <span class="custom-9">boxed</span>
+<span class="custom-14">bold</span>, <span class="custom-13">italic</span>, <span class="custom-12">underlined</span>, <span class="custom-11">struck</span>, <span class="custom-10">boxed</span>
    
-<span class="custom-11"><span class="custom-12"><span class="custom-10">Big</span></span></span>, <span class="custom-14">little</span>, <span class="custom-15">Comic Sans font</span>
+<span class="custom-7"><span class="custom-8"><span class="custom-9">Big</span></span></span>, <span class="custom-5">little</span>, <span class="custom-4">Comic Sans font</span>
 
-<span class="custom-16">Delete this text</span>, <span class="custom-17">replace it with this</span>. You <span class="custom-18"><span class="flyspell-incorrect">mispleled</span></span> this. <span class="custom-19">You can also add comments</span>.
+<span class="custom-3">Delete this text</span>, <span class="custom-2">replace it with this</span>. You <span class="custom-1">mispleled</span> this. <span class="custom">You can also add comments</span>.
+
 
 <span class="comment">#  ov-highlight-data: ...</span>
 
